# i2c-character-display

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: adapter_config.rs  bit_configurations.rs  driver.rs  lib.rs
src/adapter_config/: adafruit_lcd_backpack.rs  dual_hd44780.rs  generic_aip31068.rs  generic_pcf8574t.rs
src/driver/: aip31068.rs  hd44780.rs  st7032i.rs  standard.rs
src/driver/hd44780/: adapter.rs
src/driver/hd44780/adapter/: adafruit_lcd_backpack.rs  dual_controller_pcf8574t.rs  generic_pcf8574t.rs
