[package]
name = "i2c-character-display"
version = "0.2.0"
edition = "2021"
description = "Driver for HD44780-based character displays connected via a I2C adapter"
license = "MIT"
repository = "https://github.com/michaelkamprath/i2c-character-display"
readme = "README.md"
keywords = ["embedded", "i2c", "character-display", "driver", "lcd"]
categories = ["no-std", "embedded"]

[lib]
name = "i2c_character_display"
path = "src/lib.rs"
crate-type = ["lib"]
test = true
bench = false
doctest = false

[dependencies]
embedded-hal = { version = "1.0" }
bitfield = "0.17"
defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]

[dev-dependencies]
embedded-hal-mock = "0.11"